Fixed errors
me and mathias messed up and this is the fixes

--- a/web/src/app/setup-greenhouse/setup-greenhouse.component.css
+++ b/web/src/app/setup-greenhouse/setup-greenhouse.component.css
@@ -19,3 +19,7 @@
 .formButton {
   background-color: green;
 }
+
+.responseMessageP {
+  font-size: 14px;
+}
